# ECHO

./: .gitignore  README.md  pyproject.toml
database/: schema.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  api.js  api.ts  styles.css
frontend/src/pages/: AI.jsx  AI.tsx  Billing.jsx  Billing.tsx  Inventory.jsx  Inventory.tsx  Login.jsx  Login.tsx  Reporting.jsx  Reporting.tsx
services/ai/: main.py
services/ai/routers/: ai.py
services/auth/: main.py
services/auth/routers/: auth.py
services/billing/: main.py
services/billing/routers/: billing.py
services/inventory/: main.py
services/inventory/routers/: inventory.py
services/replenishment/: main.py
services/replenishment/routers/: replenishment.py
services/reporting/: main.py
services/reporting/routers/: reporting.py
shared/: auth.py  cache.py  database.py  events.py  models.py  schemas.py  seed.py
