[tool.poetry]
name = "retail-ops-platform"
version = "0.1.0"
description = "Omnichannel Convenience Retail Operations Platform Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.0.1"
pydantic = "^2.5.0"
httpx = "^0.25.2"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
numpy = "^1.24.3"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core"